<resources>
    <string name="appName">Math Quiz 3</string>
    <string name="trueText">True</string>
    <string name="falseText">False</string>
    <string name="nextText">Next</string>
    <string name="hintText">Hint</string>
    <string name="cheatText">Cheat</string>
    <string name="confirmCheatText">Do you really want to cheat?</string>
    <string name="confirmHintText">Do you really want to see hint?</string>
    <string name="hint">Try to factorize the number!</string>
    <string name="questionText">%1$s is a prime number.</string>
    <string name="answerPrimeText">Prime number!</string>
    <string name="answerNonPrimeText">Not a prime number!</string>
    <string name="viewPrivateLogs">View Private Logs</string>
    <string name="viewPublicLogs">View Public Logs</string>
    <string name="viewPublicVolatileLogs">View Public Volatile Logs</string>
    <string name="viewPublicExternalLogs">View Public External Logs</string>
    <string name="addUser">Add User</string>
    <string name="switchUser">Switch User</string>
    <string name="deleteUser">Delete User</string>
    <string name="enterName">Enter Name</string>
    <string name="switchText">Switch</string>
    <string name="user">User: </string>
    <string name="add">Add</string>
    <string name="highScore">High Score: </string>
    <string name="RESET">RESET</string>
    <string name="delete">Delete</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
