<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.creation.adesh.mcassignment3.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usernameText"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:text="@string/user"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_toEndOf="@id/usernameText"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/highscoreText"
        android:layout_below="@id/usernameText"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:text="@string/highScore"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/highscore"
        android:layout_below="@id/username"
        android:layout_toRightOf="@id/highscoreText"
        android:layout_marginTop="10dp" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/score"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:id="@+id/linearLayout">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:onClick="answerTrue"
                android:text="@string/trueText"
                android:layout_margin="10dp"
                android:drawableStart="@drawable/true_icon"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:onClick="answerFalse"
                android:text="@string/falseText"
                android:layout_margin="10dp"
                android:drawableEnd="@drawable/false_icon"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:text="@string/nextText"
            android:onClick="next"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:text="@string/hintText"
                android:onClick="showHint"
                android:layout_gravity="center"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:text="@string/cheatText"
                android:onClick="showCheat"
                android:layout_gravity="center"/>
        </LinearLayout>


    </LinearLayout>
    <TextView
        android:id="@+id/questionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/linearLayout"
        android:layout_centerHorizontal="true"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/RESET"
        android:onClick="reset"/>
</RelativeLayout>
